--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@capacitor/keyboard": "6.0.2",
     "@capacitor/status-bar": "6.0.1",
     "@ionic/angular": "^8.0.0",
+    "@types/jquery": "^3.5.30",
     "ionicons": "^7.0.0",
+    "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
