--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,5 +1,7 @@
-include ':app'
-include ':capacitor-cordova-android-plugins'
-project(':capacitor-cordova-android-plugins').projectDir = new File('./capacitor-cordova-android-plugins/')
-
+ include ':app' 
+ include ':capacitor-android' 
+ include ':capacitor-cordova-android-plugins' 
+ project(':capacitor-android').projectDir = new File(rootProject.projectDir, '../node_modules/@capacitor/android') 
+ project(':capacitor-cordova-android-plugins').projectDir = new File(rootProject.projectDir, '../node_modules/@capacitor/android/capacitor-cordova-android-plugins')
+  
 apply from: 'capacitor.settings.gradle'
