--- a/package.json
+++ b/package.json
@@ -26,19 +26,19 @@
     "@awesome-cordova-plugins/sqlite": "^6.9.0",
     "@capacitor-community/sqlite": "^6.0.2",
     "@capacitor/android": "^6.1.2",
-    "@capacitor/app": "6.0.1",
+    "@capacitor/app": "^6.0.1",
     "@capacitor/core": "^6.1.2",
-    "@capacitor/haptics": "6.0.1",
+    "@capacitor/haptics": "^6.0.1",
     "@capacitor/ios": "^6.1.2",
-    "@capacitor/keyboard": "6.0.2",
-    "@capacitor/status-bar": "6.0.1",
+    "@capacitor/keyboard": "^6.0.2",
+    "@capacitor/status-bar": "^6.0.1",
     "@ionic-native/sqlite": "^5.36.0",
     "@ionic/angular": "^8.0.0",
     "@types/jquery": "^3.5.30",
     "cordova-sqlite-storage": "^6.1.0",
     "ionicons": "^7.0.0",
     "jquery": "^3.7.1",
-    "rxjs": "~7.8.0",
+    "rxjs": "^6.6.7",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "tslib": "^2.3.0",
