--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@awesome-cordova-plugins/core": "^6.9.0",
+    "@awesome-cordova-plugins/native-storage": "^6.9.0",
     "@awesome-cordova-plugins/sqlite": "^6.9.0",
     "@capacitor-community/sqlite": "^6.0.2",
     "@capacitor/android": "6.1.2",
@@ -36,6 +37,7 @@
     "@capacitor/splash-screen": "^6.0.2",
     "@capacitor/status-bar": "6.0.1",
     "@ionic/angular": "^8.0.0",
+    "cordova-plugin-nativestorage": "^2.3.2",
     "cordova-sqlite-storage": "^6.1.0",
     "ionicons": "^7.0.0",
     "rxjs": "^7.8.1",
