--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cordova-plugin-camera": "^7.0.0",
     "cordova-plugin-nativestorage": "^2.3.2",
     "cordova-sqlite-storage": "^6.1.0",
+    "cors": "^2.8.5",
     "ionicons": "^7.0.0",
     "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
