--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "paths": {
       "@/*": ["src/*"]
     },
-    "types": ["node", "cordova", "bonjour", "wrap-ansi", "sockjs"],
+    "types": ["node", "cordova", "bonjour", "wrap-ansi", "sockjs", "jasmine"],
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
